add basic component inside MDX file

--- a/src/content/tabs/foo.mdx
+++ b/src/content/tabs/foo.mdx
@@ -1,5 +1,8 @@
 ---
 title: 'Foo'
 ---
+import FancyComponent from '../../components/FancyComponent.astro'
 
 This is the **Foo** content
+
+<FancyComponent />
