display image coming from frontmatter

--- a/src/content/tabs/foo.mdx
+++ b/src/content/tabs/foo.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Foo'
+albumImage: '../../assets/images/foo.jpeg'
 ---
 import FancyComponent from '../../components/FancyComponent.astro'
 
