--- a/src/content/tabs/bar.mdx
+++ b/src/content/tabs/bar.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Bar'
-albumImage: '../../assets/images/foo.jpeg'
+albumImage: '../../assets/images/bar.jpg'
 ---
 
 This is the **Bar** content
