add tuning and capo to the frontmatter and display

--- a/src/content/tabs/john-mayer/dear-marie.mdx
+++ b/src/content/tabs/john-mayer/dear-marie.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Dear Marie'
+tuning: 'Standard'
 album: 'Paradise Valley'
 artist: 'John Mayer'
 albumImageURL: '../../../assets/images/albums/paradise-valley.jpg'
