--- a/src/content/tabs/john-mayer/queen-of-california.mdx
+++ b/src/content/tabs/john-mayer/queen-of-california.mdx
@@ -1,5 +1,7 @@
 ---
 title: 'Queen of California'
+tuning: 'Standard'
+capo: 4
 album: 'Born and Raised'
 artist: 'John Mayer'
 albumImageURL: '../../../assets/images/albums/born-and-raised.jpg'
