--- a/src/content/tabs/jorge-drexler/tres-mil-millones-de-latidos.mdx
+++ b/src/content/tabs/jorge-drexler/tres-mil-millones-de-latidos.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Tres Mil Millones de Latidos'
+tuning: 'Standard'
 album: 'Amar la Trama'
 artist: 'Jorge Drexler'
 albumImageURL: '../../../assets/images/albums/amar-la-trama.jpg'
