add spotify & apple music links to frontmatter and tabs

--- a/src/content/tabs/john-mayer/dear-marie.mdx
+++ b/src/content/tabs/john-mayer/dear-marie.mdx
@@ -5,6 +5,8 @@ album: 'Paradise Valley'
 artist: 'John Mayer'
 albumImageURL: '../../../assets/images/albums/paradise-valley.jpg'
 artistImageURL: '../../../assets/images/artists/john-mayer.jpg'
+spotifyURL: 'https://spotify.link/sX0pbnm52Db'
+appleMusicURL: 'https://music.apple.com/ar/album/dear-marie/672720304?i=672720308&l'
 slug: 'dear-marie'
 ---
 
