--- a/src/content/tabs/john-mayer/queen-of-california.mdx
+++ b/src/content/tabs/john-mayer/queen-of-california.mdx
@@ -6,6 +6,8 @@ album: 'Born and Raised'
 artist: 'John Mayer'
 albumImageURL: '../../../assets/images/albums/born-and-raised.jpg'
 artistImageURL: '../../../assets/images/artists/john-mayer.jpg'
+spotifyURL: 'https://spotify.link/e0UFricB3Db'
+appleMusicURL: 'https://music.apple.com/ar/album/queen-of-california/516701586?i=516701588'
 slug: 'queen-of-california'
 ---
 
