--- a/src/content/tabs/john-mayer/dear-marie.mdx
+++ b/src/content/tabs/john-mayer/dear-marie.mdx
@@ -7,6 +7,7 @@ albumImageURL: '../../../assets/images/albums/paradise-valley.jpg'
 artistImageURL: '../../../assets/images/artists/john-mayer.jpg'
 spotifyURL: 'https://spotify.link/sX0pbnm52Db'
 appleMusicURL: 'https://music.apple.com/ar/album/dear-marie/672720304?i=672720308&l'
+videoIDs: ['eZHBH1MoT3g', '4oKYnjCRtnY']
 slug: 'dear-marie'
 ---
 
