--- a/src/content/tabs/john-mayer/dear-marie.mdx
+++ b/src/content/tabs/john-mayer/dear-marie.mdx
@@ -11,4 +11,83 @@ videoIDs: ['eZHBH1MoT3g', '4oKYnjCRtnY']
 slug: 'dear-marie'
 ---
 
-This is the **Dear Marie** tab 🎵
+The technique used to play each chord is the same as the one used in **Stop This Train** (also by John), the parts that are played differently are tabbed-out.
+
+```
+[Intro]
+
+e|-------------------------------------|
+B|------5-----------5-----------5------|
+G|---6--------6-----------4------------|x4
+D|------7--------7--7--------7-----7---|
+A|-------------------------------------|
+E|---5-----5-----------5---------------|
+
+
+[Verse]
+
+"Dear Marie, tell me what it was I used to be"
+
+e|------------------|
+B|---5---5-----10---|
+G|---6---6h7---7----|
+D|---7---7-----7----|
+A|-------------9----|
+E|---5---5----------|
+
+"Oh Dear Marie, tell me what it was I used to be"
+
+e|------------------|
+B|---5---5-----10---|
+G|---6---6h7---7----|
+D|---7---7-----7----|
+A|-------------9----|
+E|---5---5----------|
+
+"And if you are further up the road can you show me what I still can't see"
+
+e|-----------------------|
+B|---5---5-----12---10---|
+G|---6---6h7---9----7----|
+D|---7---7-----9----7----|
+A|-------------11---9----|
+E|---5---5---------------|
+
+
+[Ending]
+
+Switch to strumming
+
+e|-------------|------------------|-------|
+B|---5----10---|---5-----2---10---|---5---|
+G|---6h7--7----|---6h7---2---7----|---6---|
+D|---7----7----|---7-----4---7----|---7---|
+A|--------9----|-------------9----|-------|
+E|---5---------|---5-----2--------|---5---|
+```
+
+`h` Hammer on
+
+## Lyrics
+
+`[Verse]`  
+Dear Marie, tell me what it was I used to be  
+Oh Dear Marie, tell me what it was I used to be  
+And if you’re further up the road, can you show me what I still can’t see?
+
+`[Verse]`  
+Remember me, I’m the boy you used to love when we were fifteen  
+Remember me, I’m the boy you used to love when we were fifteen  
+Now I wonder what you think, when you see me on the magazine
+
+`[Verse]`  
+From time to time, I go looking for your photograph online  
+From time to time, I go looking for your photograph online  
+Some county judge in Ohio is all I ever find
+
+`[Verse]`  
+Dear Marie, tell me do you still believe in me?  
+Dear Marie, tell me do you still believe in me?  
+Well I’ve got my dream, but you’ve got a family  
+Yeah I’ve got that dream, but you’ve got yourself a family  
+Yeah I’ve got that dream, but I guess it got away from me
