--- a/src/content/tabs/john-mayer/shadow-days.mdx
+++ b/src/content/tabs/john-mayer/shadow-days.mdx
@@ -5,11 +5,197 @@ album: 'Born and Raised'
 artist: 'John Mayer'
 albumImageURL: '../../../assets/images/albums/born-and-raised.jpg'
 artistImageURL: '../../../assets/images/artists/john-mayer.jpg'
-# TODO update spotify link
-spotifyURL: 'https://spotify.link/sX0pbnm52Db'
+spotifyURL: 'https://spotify.link/d3pBz2zO4Db'
 appleMusicURL: 'https://music.apple.com/ar/album/queen-of-california/516701586?i=516701712&l'
 videoIDs: ['uJpvUTDB4Ps']
 slug: 'shadow-days'
 ---
 
-This is the **Shadow Days** tab 🎵
+The technique used to play each chord is the same as the one used in **Neon** (also by John), the parts that are played differently are tabbed-out.
+
+```
+Intro
+
+e|-------------------------------|--10--|-----------------|--2--|
+B|---10----------10--------------|--8---|-----------------|--3--|
+G|-------11----------11----------|--9---|-----------------|--0--|
+D|--------------------------12---|--10--|-----5-----------|-----|
+A|-------------------------------|------|-----------5\2---|--2--|
+E|---10------10---------10-------|--8---|---3---5/7-------|-----|
+
+e|--------10---|-----------------|--2--|
+B|---10---8----|-----------------|--3--|
+G|---11---9----|-----------------|--0--|
+D|---12---10---|-----5-----------|-----|
+A|-------------|-----------5h7---|--2--|
+E|---10---8----|---3---5/7-------|-----|
+
+"Did you know that you could be wrong ..."
+
+e|--------10-------2---|
+B|---10---8----3---3---|
+G|---11---9----4---0---| x4
+D|---12---10---5-------|
+A|-----------------2---|
+E|---10---8----3-------|
+
+"Hard times, help me see ..."
+
+e|----------------|--2--|
+B|---3--3--3--5---|--3--|
+G|----------------|--0--|
+D|----------------|-----|
+A|------0--2--5---|--2--|
+E|---3------------|-----|
+
+"I'm a good man with a good heart ..."
+
+e|-------------------2---0---|
+B|---3---3---3---3---3---3---|
+G|---2---4---2---2---0---0---|
+D|---0---5---0---2-----------|
+A|-----------2---0---2---2---|
+E|---2---3-------------------|
+
+e|-----------------------|
+B|---3---3---3---2---3---|
+G|---2---4---2---2---4---|
+D|---0---5---0---2---5---|
+A|-----------2---0-------|
+E|---2---3-----------3---|
+
+e|--------10---|-----------------|--2--|
+B|---10---8----|-----------------|--3--|
+G|---11---9----|-----------------|--0--|
+D|---12---10---|-----5-----------|-----|
+A|-------------|-----------5h7---|--2--|
+E|---10---8----|---3---5/7-------|-----|
+
+"Well I ain't no trouble maker ..."
+
+e|---------10---------2---|
+B|---10----8-----3----3---|
+G|---11----9-----4----0---| x4
+D|---12----10----5--------|
+A|--------------------2---|
+E|---10----8-----3--------|
+
+"Hard times, let me be ..."
+
+e|----------------|--2--|
+B|---3--3--3--5---|--3--|
+G|----------------|--0--|
+D|----------------|-----|
+A|------0--2--5---|--2--|
+E|---3------------|-----|
+
+“I'm a good man ...”
+
+e|-----------------------|
+B|---3---3---3---2---3---|
+G|---2---4---2---2---4---|
+D|---0---5---0---2---5---|
+A|-----------2---0-------|
+E|---2---3-----------3---|
+
+“Now I'm right here ...”
+
+e|-----------------------|
+B|---3---3---3---2---3---|
+G|---2---4---2---2---0---|
+D|---0---5---0---2---0---|
+A|-----------2---0-------|
+E|---2---3-----------3---|
+
+e|-------0---0---0---0----0---------------------9-----------|
+B|---3---3---3---3---10---3---7---5---10---12---7---5---3---|
+G|---2---0---2---2---11---4---7---6---11---0----7---6---4---|
+D|---0---------------12---5---9---7---12---12---9---7---5---|
+A|-----------2---0-------------------------10---------------|
+E|---2---3-----------10---3---7---5---10--------7---5---3---|
+
+“I'm a good man ...”
+
+e|-------------------2---0---|
+B|---3---3---3---2---3---3---|
+G|---2---4---2---2---0---0---|
+D|---0---5---0---2-----------|
+A|-----------2---0-----------|
+E|---2---3-----------3---3---|
+
+“Now I'm right here ...”
+
+e|-----------------------|
+B|---3---3---3---2---3---|
+G|---2---4---2---2---0---|
+D|---0---5---0---2---0---|
+A|-----------2---0-------|
+E|---2---3-----------3---|
+
+Ending
+
+e|---0-----10---|-----------------|--2--|
+B|---10----8----|-----------------|--3--|
+G|---11----9----|-----------------|--0--|
+D|---12----10---|-----5-----------|-----|
+A|--------------|-----------5\2---|--2--|
+E|---10----8----|---3---5/7-------|-----|
+
+e|---0-----10---|-----------------2p0---|
+B|---10----8----|-----------------3-----|
+G|---11----9----|-----------------0-----|
+D|---12----10---|-----5-----------------|
+A|--------------|-----------5\2---2-----|
+E|---10----8----|---3---5/7-------------|
+```
+
+`\` Slide down  
+`/` Slide up  
+`h` Hammer on  
+`p` Pull off
+
+## Lyrics
+
+Did you know that you could be wrong  
+And swear you're right?  
+Some people been known to do it  
+All their lives  
+But you find yourself alone  
+Just like you found yourself before  
+Like I found myself in pieces  
+On the hotel floor  
+Hard times help me see
+
+I'm a good man with a good heart  
+Had a tough time, got a rough start  
+But I finally learned to let it go  
+Now I'm right here, and I'm right now  
+And I'm open, knowing somehow  
+That my shadow days are over  
+My shadow days are over now
+
+Well I'm no trouble maker  
+And I never meant her harm  
+But it doesn't mean I didn't make it  
+Hard to carry on  
+Well it sucks to be honest (honest)  
+And it hurts to be real  
+But it's nice to make some love  
+That I can finally feel  
+Hard times let me be
+
+I'm a good man with a good heart  
+Had a tough time, got a rough start  
+But I finally learned to let it go  
+Now I'm right here, and I'm right now  
+And I'm open, knowing somehow  
+That my shadow days are over  
+My shadow days are over now
+
+I'm a good man with a good heart  
+Had a tough time, got a rough start  
+But I finally learned to let it go  
+Now I'm right here, and I'm right now  
+And I'm open, knowing somehow  
+That my shadow days are over  
+My shadow days are over now
